--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/xcbfpq327/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528176.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-1-320x200.jpg"><p align="center">大选日后 川普总统发表首个声明</p></a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528176.md#1" title="大选日后 川普总统发表首个声明""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528082.md#1" title="密西根监票员爆料：实查7千票 却报出5万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229465940-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1" title="【重播】川普团队：内华达政府纵容非法投票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Untitled-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普：在宾州获巨大法律胜利""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1" title="迫害法轮功 广东670人遭厄运 公安系统居多（1）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/2020-10-28-mh-guangdong-ebao-2-320x200.png">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/14/n12475476.md#1" title="【名家专栏】选民欺诈 谁在策划选举风暴""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1058239650-web-1200x716-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524856.md#1" title="【独家】内部文件解密美国在华“和平队”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526087.md#1" title="拜登一夜离奇“翻盘” 川普猛批计票舞弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283816258-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1" title="【思想领袖】纳瓦罗：美媒成中共“有用白痴”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50e3caa58e60cbf457ec145091d24dbc-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528038.md#1">中共拟重判法轮功学员金玉红 律师：捏造罪名</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527954.md#1">【横河观点】从美大选异常看制度和人性</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528317.md#1">数据分析公司总裁：川普或翻转亚利桑那州</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527052.md#1">设陷阱误捕美洲狮 美国猎人冒险将其放生</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528106.md#1">【名家专栏】美大选 取决于如何计算选票</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527981.md#1">川普团队：民主党在全美撒谎作弊和偷窃</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528162.md#1">【薇羽看世间】美大选现异常 谁在搅混水？</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528374.md#1">纽总理承诺圣诞节前推出更多小企业援助</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528038.md#1">中共拟重判法轮功学员金玉红 律师：捏造罪名</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527954.md#1">【横河观点】从美大选异常看制度和人性</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12528317.md#1">数据分析公司总裁：川普或翻转亚利桑那州</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527052.md#1">设陷阱误捕美洲狮 美国猎人冒险将其放生</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -28,18 +28,18 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521384.md#1">盘点纽约统战组织(2)华美协进社与文化统战</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523312.md#1">【图解】选前震撼弹 拜登电脑门事件簿</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520590.md#1">钟原：美大选关键时刻 中共党媒报导淡化处理</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520639.md#1">【独家】中领馆管控公派学者更多证据曝光</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520689.md#1">【远见快评】最后冲刺 川普人气爆棚 奥拜尴尬</a><br>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518713.md#1">【名家专栏】先知、国王、圣徒和叛徒</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,922,906 人
+!共 366,923,204 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
